Archive2/78/ce457db7621381/output
main.cpp:14:26: error: invalid covariant return type for 'virtual std::unique_ptr<Bar> Bar::clone()'
     std::unique_ptr<Bar> clone() override;
                          ^
main.cpp:9:34: error:   overriding 'virtual std::unique_ptr<Foo> Foo::clone()'
     virtual std::unique_ptr<Foo> clone();
                                  ^
